@@ -1,5 +1,8 @@
 [b]Version 0.7.1[/b]:
 
+(2012-02-27)
+ * Youtube: flv videos now have the lowest priority.
+
 (2012-02-25)
  * New option in the menu Options to run the smplayer youtube browser
    (if installed).
